# minisci

./: README.md  README.rst  pyproject.toml
minisci/: main.py
minisci/assets/: gbr.mod
minisci/helper/: bash.py  features.py  graph.py  kallisto.py  protonate.py  rdkit.py  results.py  scikit.py  xtb.py
tests/: test_minisci.py
