[tool.poetry]
name = "minisci"
version = "0.1.0"
description = ""
authors = ["Caldeweyher, Eike <e.caldeweyher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
