[tool.poetry]
name = "minisci"
version = "0.1.0"
description = ""
authors = ["Caldeweyher, Eike <e.caldeweyher@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
typer = {extras = ["all"], version = "^0.6.1"}
morfeus-ml = "^0.7.2"
dimorphite-dl = "^1.3.2"
kallisto = "^1.0.7"
rdkit = "^2022.3.5"
scikit-learn = "1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
